--- a/_posts/2021-11-09-first.md
+++ b/_posts/2021-11-09-first.md
@@ -4,4 +4,4 @@ title:  "첫 포스팅입니다."
 ---
 
 # 안녕하세요.
-열심히 하겠습니다!
+열심히 하겠습니다!![화면 캡처 2021-12-08 205810](C:\Users\igaeu\Desktop\project\gaeunleeme-github-blog\gaeunleeme.github.io\images\2021-11-09-first\화면 캡처 2021-12-08 205810.png)
