댓글기능 추가

--- a/_posts/2021-11-09-first.md
+++ b/_posts/2021-11-09-first.md
@@ -4,4 +4,8 @@ title:  "첫 포스팅입니다."
 ---
 
 # 안녕하세요.
-열심히 하겠습니다!![화면 캡처 2021-12-08 205810](C:\Users\igaeu\Desktop\project\gaeunleeme-github-blog\gaeunleeme.github.io\images\2021-11-09-first\화면 캡처 2021-12-08 205810.png)
+열심히 하겠습니다!
+
+**실시간 반영 되나요**
+
+![universe](C:\Users\igaeu\Desktop\project\gaeunleeme-github-blog\gaeunleeme.github.io\images\2021-11-09-first\universe.jpg)
