대규모 업데이트

--- a/_posts/2021-11-09-first.md
+++ b/_posts/2021-11-09-first.md
@@ -1,11 +1,33 @@
 ---
 layout: single
 title:  "첫 포스팅입니다."
+categories: coding
+tag: [python, blog, jekyll]
+toc: true
 ---
 
 # 안녕하세요.
 열심히 하겠습니다!
 
+```python
+
+first_name = "Nora"
+favorite_language = "Python"
+
+print(f"Hi, I'm {first_name}. I'm learning {favorite_language}.")
+
+```
+
 **실시간 반영 되나요**
+
+## 이미지목차
+
+### 이미지 세부목차1
+
+
+
+### 이미지 세부목차2
+
+
 
 ![universe](C:\Users\igaeu\Desktop\project\gaeunleeme-github-blog\gaeunleeme.github.io\images\2021-11-09-first\universe.jpg)
